// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button button ripple"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className=" icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal  icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
  </div>
</Button>
`;

exports[`Test creation of a Button control 1`] = `
<div
  className="ui-button button ripple test-class"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className=" icon"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    iconName="bomb"
    id=""
    imageFile=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    visible={true}
  />
</div>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<div
  className="ui-button button ripple"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "green",
      "borderWidth": "2px",
      "color": "red",
    }
  }
>
  <Icon
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className=" icon"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    iconName="superpowers"
    id=""
    imageFile=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    visible={true}
  />
</div>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-button button disabled nohover"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className=" icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal  icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
  </div>
</Button>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  visible={false}
>
  <div
    className="ui-button button ripple invisible"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      backgroundColor="inherit"
      borderColor="inherit"
      borderWidth="none"
      className=" icon"
      color="inherit"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <i
        className="ui-icon icon none fa fa-bomb normal  icon"
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      />
    </Icon>
  </div>
</Button>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;
